--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "eslint": "^9.5.0",
+    "eslint-plugin-vue": "^9.26.0",
+    "globals": "^15.6.0",
     "vite": "^5.2.8"
   }
 }
